# numberplate_solver

./: .gitignore  CMakeLists.txt  LICENSE  exprs  main.cpp  numberplate_exprs.cpp  numberplate_exprs.hpp  numberplate_solver.cpp  numberplate_solver.hpp  numberplate_solver.py
gui/numberplate_gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  numberplate_gui_ja_JP.ts
