cmake_minimum_required(VERSION 3.5)

project(numberplate_gui LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# QtCreator supports the following variables for Android, which are identical to qmake Android variables.
# Check http://doc.qt.io/qt-5/deployment-android.html for more information.
# They need to be set before the find_package(Qt5 ...) call.

#if(ANDROID)
#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
#    if (ANDROID_ABI STREQUAL "armeabi-v7a")
#        set(ANDROID_EXTRA_LIBS
#            ${CMAKE_CURRENT_SOURCE_DIR}/path/to/libcrypto.so
#            ${CMAKE_CURRENT_SOURCE_DIR}/path/to/libssl.so)
#    endif()
#endif()

find_package(Qt5 COMPONENTS Widgets LinguistTools REQUIRED)

set(TS_FILES numberplate_gui_ja_JP.ts)

add_subdirectory(core)

if(ANDROID)
  add_library(numberplate_gui SHARED
    main.cpp
    mainwindow.cpp
    mainwindow.hpp
    mainwindow.ui
    ${TS_FILES}
  )
else()
  add_executable(numberplate_gui
    main.cpp
    mainwindow.cpp
    mainwindow.hpp
    mainwindow.ui
    ${TS_FILES}
  )
endif()

target_link_libraries(numberplate_gui PRIVATE Qt5::Widgets)
target_link_libraries(numberplate_gui PRIVATE numberplate_solver)
target_include_directories(numberplate_gui PRIVATE ${numberplate_solver_SOURCE_DIR})

qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
